--- a/index.html
+++ b/index.html
@@ -398,7 +398,9 @@
                 <h2>About Us</h2>
                 <form>
                     <div class="form-content">
-                        Welcome to Traveler's Cafe, where we merge the world of gaming with the joy of delicious food and drink. Our cafe is named Traveler's Cafe because we want our customers to feel like they've found the perfect place to take a break and rest, just like a traveler finding an inn or tavern in their journey. We're also big fans of Genshin Impact, so we thought it would be fun to have a Genshin Collaboration with our cafe. Blezzy and Romeo are passionate about gaming and wanted to bring that joy to our cafe. Thank you for visiting!
+                        Welcome to Traveler's Cafe, where we merge the world of gaming with the joy of trying refreshing drinks. Our cafe is named Traveler's Cafe because we want our customers to feel like they've found the perfect place to take a break and rest, just like a traveler finding an inn or tavern in their journey. We're also big fans of Genshin Impact, so we thought it would be fun to have a Genshin Collaboration with our cafe. Blezzy and Romeo are passionate about gaming and wanted to bring that joy to our cafe.
+			    Thank you for visiting!
+			    
                     </div>
                     <div class="social-media">
                         <a href="#fb"><i class="fa-brands fa-facebook"></i></a>
