--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://kit.fontawesome.com/92d70a2fd8.js" crossorigin="anonymous"></script>
     <title>TRAVELLER'S CAFE</title>
+	<link rel="icon" href="piclogo.png" type="image/icon type">
 </head>
 
 
